# file-to-string

./: CMakeLists.txt  README.md  file2string.c
